<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context="charles.courses.NewTaskActivity">

    <include layout="@layout/toolbar" />

    <android.support.constraint.ConstraintLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <AutoCompleteTextView
            android:id="@+id/NewTaskInput"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/edit_text_style"
            android:completionThreshold="1"
            android:cursorVisible="true"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/task_name_hint"
            android:imeOptions="actionDone"
            android:padding="7dp"
            android:singleLine="true"
            android:textColorLink="@color/colorPrimary"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textIsSelectable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <requestFocus/>
        </AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/NewTaskQuantityInput"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_style"
            android:completionThreshold="1"
            android:cursorVisible="true"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/task_qty_hint"
            android:imeOptions="actionDone"
            android:padding="6dp"
            android:singleLine="true"
            android:textColorLink="@color/colorPrimary"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textIsSelectable="false"
            app:layout_constraintStart_toStartOf="@+id/NewTaskInput"
            app:layout_constraintTop_toBottomOf="@+id/NewTaskInput" />

        <AutoCompleteTextView
            android:id="@+id/NewTaskStoreInput"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_style"
            android:completionThreshold="1"
            android:cursorVisible="true"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/store_hint"
            android:imeOptions="actionDone"
            android:padding="6dp"
            android:singleLine="true"
            android:textColorLink="@color/colorPrimary"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textIsSelectable="false"
            app:layout_constraintStart_toStartOf="@+id/NewTaskQuantityInput"
            app:layout_constraintTop_toBottomOf="@+id/NewTaskQuantityInput" />

        <AutoCompleteTextView
            android:id="@+id/NewTaskReasonInput"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edit_text_style"
            android:completionThreshold="1"
            android:cursorVisible="true"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/reason_hint"
            android:imeOptions="actionDone"
            android:padding="6dp"
            android:singleLine="true"
            android:textColorLink="@color/colorPrimary"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textIsSelectable="false"
            app:layout_constraintEnd_toEndOf="@+id/NewTaskQuantityInput"
            app:layout_constraintTop_toTopOf="@+id/NewTaskStoreInput" />

        <Switch
            android:id="@+id/EnableRecurrenceSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onActivateRecurrence"
            app:layout_constraintEnd_toEndOf="@+id/NewTaskReasonInput"
            app:layout_constraintTop_toTopOf="@+id/ActivateRecurrenceTextView" />

        <Spinner
            android:id="@+id/RecurrenceNumberSpinner"
            android:layout_width="68dp"
            android:layout_height="28dp"
            app:layout_constraintEnd_toStartOf="@+id/RecurrenceDurationSpinner"
            app:layout_constraintTop_toTopOf="@+id/RecurrenceTimeTextView" />

        <Spinner
            android:id="@+id/RecurrenceDurationSpinner"
            android:layout_width="140dp"
            android:layout_height="29dp"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="@+id/EnableRecurrenceSwitch"
            app:layout_constraintTop_toTopOf="@+id/RecurrenceNumberSpinner" />

        <TextView
            android:id="@+id/ActivateRecurrenceTextView"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="52dp"
            android:text="@string/reminder"
            android:textColor="@color/text_selector"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/NewTaskStoreInput"
            app:layout_constraintTop_toBottomOf="@+id/NewTaskStoreInput" />

        <TextView
            android:id="@+id/RecurrenceTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/after"
            android:textColor="@color/text_selector"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/ActivateRecurrenceTextView"
            app:layout_constraintTop_toBottomOf="@+id/ActivateRecurrenceTextView" />
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>